Fix -XX:+PrintGCDetails bug.